# esp-telegram

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  certgen.sh  idf_component.yml
include/: telegram.h
include/telegram/: _api.h  getMe.h  sendMessage.h
include/telegram/helper/: _api.h
include/telegram/types/: message.h
src/telegram/: _api.c  getMe.c  sendMessage.c
src/telegram/helper/: _api.c
src/telegram/types/: message.c
